added react frontend

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./client/style.css">
+        <!-- <link rel="stylesheet" type="text/css" href="./client/style.css"> -->
         <title>
             Homepage
         </title>
@@ -51,5 +51,7 @@
             </form>
         </div>
     </body>
-    <script src="./client/main.js"></script>
+    <!-- <script src="./client/main.js"></script> -->
 </html>
+
+<!-- okay so maybe this isn't gonna work oh fun there you are thank you so much bongo cat this is so cuteajfldjafldjafljsdalfjd -->
