--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
             Homepage
         </title>
         <link rel="stylesheet" href="./frontend/styles.css">
-    <script defer src="/build/bundle.js"></script></head>
+    </head>
     <body>
         <div id="contents"></div>
         <script type="text/javascript" src="./build/bundle.js"></script>
