--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <title>
             Left Rising HR Page
         </title>
-        <link rel="stylesheet" href="./frontend/styles.css">
+        <link rel="stylesheet" href="./src/tailwindOutput.css">
     </head>
     <body>
         <div id="contents"></div>
