added signin page component

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <body>
         <div id="contents"></div>
         <script type="text/javascript" src="./build/bundle.js"></script>
+        <link rel="logo icon" id="favicon" href="../docs/assets/images/LogoFavicon.ico" />
     </body>
    
 </html>
